# -EDD-Proyecto_202001151

./: .gitignore  amigos sugeridos.dot
Fase1/: .gitignore  Funciones.cpp  Funciones.h  Main.cpp  Makefile  Menus.cpp  lista_usuarios.dot  matriz_relaciones.dot
Fase1/jsons/: publicaciones.json  solicitudes.json  usuarios.json
Fase1/lib/: ListaEnlazadaDoble.cpp  ListaEnlazadaSimple.cpp  ListaEnlazadaSolicitudes.cpp
Fase1/models/: Estructuras.h  Funciones.h  Globales.h  ListaEnlazadaDoble.h  ListaEnlazadaSimple.h  ListaPublicaciones.h  ListaPublicacionesFeed.h  ListaSolicitudes.h  ListaUsuarios.h  MatrisRelacion.h  MatrizRelacion.h  Menus.h  Pila.h
Fase1/output/: grafica.dot
Fase2/: ArbolAVL.cpp  ArbolAVL.h  CMakeLists.txt  ListaDoble.h  ListaEnlazada.h  My_Resources.qrc  Structs.h  arbolabb.cpp  arbolabb.h  arbolb5.cpp  arbolb5.h  arbolbst.cpp  dialogmodificar.cpp  dialognuevopost.cpp  dialognuevopost.h  dialognuevopost.ui  dialogpost.cpp  dialogpost.ui  funciones.cpp  funciones.h  globales.cpp  globales.h  main.cpp  matrizrelacion.cpp  matrizrelacion.h  resource.qrc  widgetcomment.cpp  widgetcomment.ui  widgetfriend.cpp  widgetfriend.h  widgetfriend.ui  widgetpost.cpp  widgetpost.h  widgetpost.ui  windowadmin.cpp  windowadmin.h  windowadmin.ui  windowmain.cpp  windowmain.h  windowmain.ui  (+6 more)
Fase2/.cache/clangd/index/: Structs.h.D0E7867EE6820A13.idx  arbolavl.h.38171B37289C4525.idx  globales.cpp.5FC26E6A3DD8503B.idx  windowmain.cpp.303B4B5C872720C7.idx  windowuser.cpp.8E46560ABB927713.idx  windowuser.h.4AF170279DC9978B.idx
Fase2/jsons/: publicaciones.json  solicitudes.json  usuarios.json
Fase2/jsons/Archivos Calificacion/: publicaciones.json  solicitudes.json  usuarios.json
Fase3/: CMakeLists.txt  ListaDoble.h  ListaEnlazada.h  Structs.h  StructsComment.h  arbolavl.cpp  arbolavl.h  arbolb5.cpp  arbolb5.h  arbolbst.h  dialogmodificar.cpp  dialogmodificar.h  dialogmodificar.ui  dialognuevopost.cpp  dialognuevopost.h  dialognuevopost.ui  dialogpost.cpp  dialogpost.h  ej.dot  funciones.cpp  funciones.h  globales.cpp  globales.h  graforelacion.cpp  graforelacion.h  hash_functions.h  main.cpp  matrizrelacion.cpp  widgetcomment.h  widgetcomment.ui  widgetfriend.cpp  widgetfriend.ui  widgetpost.cpp  widgetpost.ui  windowadmin.cpp  windowadmin.h  windowadmin.ui  windowlogin.cpp  windowlogin.h  windowlogin.ui  (+4 more)
Fase3/.cache/clangd/index/: ListaEnlazada.h.A973251F552EEF51.idx  arbolavl.cpp.40A9CBB067600952.idx  funciones.cpp.964FAC5E7E9E6B78.idx  funciones.h.956936834DFB8F8C.idx  globales.h.23D2B924F583BCA1.idx  main.cpp.EAD19F9A620C107F.idx  windowadmin.cpp.7E218DC9D31B28DD.idx  windowadmin.h.3B4F0E2006206CCA.idx  windowmain.h.C15DC907AB8E34B9.idx
Fase3/Classes/: blockchain.cpp  blockchain.h
Fase3/Manuales/: Manual de usuario.docx  Manual tecnico.docx
Fase3/Tree/: merkle.cpp  merkle.h
Fase3/Trees/: huffman.cpp  huffman.h  merkle.cpp  merkle.h
Fase3/Widgets/: widgetblock.cpp  widgetblock.h  widgetblock.ui
Fase3/jsons/: publicaciones.json  solicitudes.json  usuarios.json
